modo noturno pra dar charme

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <header>
     <h1>Controle Financeiro Pessoal</h1>
+    <button id="toggleTema">🌙 Alternar Tema</button>
   </header>
 
   <section id="resumo">
